@@ -1,4 +1,11 @@
 ------------------------------------------------------
+Release 2 | Beta 1 | Development 0 | Experimental 3
+
+* Added ControlBindingUtils
+
+* Changed control binding saving/loading
+
+------------------------------------------------------
 Release 2 | Beta 1 | Development 0 | Experimental 2
 
 * Added normal matrix to the vertex shader
